--- a/about.html
+++ b/about.html
@@ -117,7 +117,7 @@
                         <a href="school.html">School Construction</a>
                         <a href="hospital.html">Medical Centers</a>
                         <a href="construction.html">Needy-house Construction</a>
-                        <a href="adhuhahr.html">Qurbani/ Adhuhah</a>
+                        <a href="adhuhah.html">Qurbani/ Adhuhah</a>
                         <a href="ramadhan.html">Ramadhan Iftar</a>
                         <a href="orphans.html">Orphanage Support</a>
                         <a href="livestock.html">Live stock</a>
