--- a/mosque.html
+++ b/mosque.html
@@ -139,21 +139,21 @@
         <div class="alert alert-info">
             <p><strong><u>MOSQUE CONSTRUCTION</u></strong><br> <div class="col-md-12 mb-4">
                 <div class="alert alert-info">
-            <p>In Islam, a mosque holds a special place. It is a place of worship, reflection, and spiritual growth. As we raise the pillars and lay the foundation of this holy sanctuary, we are creating a haven for the Muslim community to come together in prayer, seek knowledge, and foster a strong sense of brotherhood and sisterhood.</p>
-            <p>The construction of a mosque is not merely the raising of walls and domes; it is a manifestation of our dedication to preserving the teachings of Islam for generations to come. Each brick laid carries the weight of our hopes, our dreams, and our commitment to spreading the message of peace and unity.</p>
-            <p>However, this endeavor cannot be achieved without the collective efforts of our community. We invite you to be a part of this noble mission by contributing to the construction of our mosque. Your donations are not merely financial support; they are a contribution to the legacy of Islam and a means of earning eternal rewards.</p>
-            <p>Imagine the reward of every prayer offered, every recitation of the Quran, and every supplication made within the walls you helped build. Your generosity will echo through time, reaching the hearts of countless worshippers and becoming a source of blessings for you and your loved ones.</p>
-            <p>As we come together to build this spiritual sanctuary, let us remember the words of our beloved Prophet Muhammad (ﷺ): "Whoever builds a mosque for Allah, Allah will build for him a house in Paradise."</p>
-            <p><em>Your contribution matters. Join us in creating a place of worship that will stand as a beacon of faith, guiding generations to come towards the light of Islam.</em></p>
-            <p>May Allah accept your intentions and bless your generosity as you help us build not just a mosque, but a home for the heart and a gateway to His mercy.</p>
-            <p><em>"The likeness of those who spend their wealth in Allah's way is as the likeness of a grain of corn that sprouts seven ears, and in every ear there are a hundred grains." (Quran 2:261)</em></p>
+            <p>In Islam, a mosque holds a special place. It is a place of worship, reflection, and spiritual growth. As we raise the pillars and lay the foundation of this holy sanctuary, we are creating a haven for the Muslim community to come together in prayer, seek knowledge, and foster a strong sense of brotherhood and sisterhood.</p><br>
+            <p>The construction of a mosque is not merely the raising of walls and domes; it is a manifestation of our dedication to preserving the teachings of Islam for generations to come. Each brick laid carries the weight of our hopes, our dreams, and our commitment to spreading the message of peace and unity.</p><br>
+            <p>However, this endeavor cannot be achieved without the collective efforts of our community. We invite you to be a part of this noble mission by contributing to the construction of our mosque. Your donations are not merely financial support; they are a contribution to the legacy of Islam and a means of earning eternal rewards.</p><br>
+            <p>Imagine the reward of every prayer offered, every recitation of the Quran, and every supplication made within the walls you helped build. Your generosity will echo through time, reaching the hearts of countless worshippers and becoming a source of blessings for you and your loved ones.</p><br>
+            <p>As we come together to build this spiritual sanctuary, let us remember the words of our beloved Prophet Muhammad (ﷺ): "Whoever builds a mosque for Allah, Allah will build for him a house in Paradise."</p><br>
+            <p><em>Your contribution matters. Join us in creating a place of worship that will stand as a beacon of faith, guiding generations to come towards the light of Islam.</em></p><br>
+            <p>May Allah accept your intentions and bless your generosity as you help us build not just a mosque, but a home for the heart and a gateway to His mercy.</p><br>
+            <p><em>"The likeness of those who spend their wealth in Allah's way is as the likeness of a grain of corn that sprouts seven ears, and in every ear there are a hundred grains." (Quran 2:261)</em></p><br>
             <p class="arabic-text">
                 "مَثَلُ ٱلَّذِينَ يُنفِقُونَ أَمۡوَٲلَهُمۡ فِى سَبِيلِ ٱللَّهِ كَمَثَلِ حَبَّةٖ أَنۡبَتَتۡ سَبۡعَ سَنَابِلَ فِى كُلِّ سُنۢبُلَةٍ۬ مِّاۤئَةُ حَبَّةٖۗ وَٱللَّهُ يُضَـٰعِفُ لِمَن يَشَآءُۗ وَٱللَّهُ وَٰسِعٌ عَلِيمٌ۬"
-            </p>
+            </p><br>
             <p class="translation-text">
                 <em>"The example of those who spend their wealth in the way of Allah is like a seed [of grain] which grows seven spikes; in each spike is a hundred grains. And Allah multiplies [His reward] for whom He wills. And Allah is all-Encompassing and Knowing."</em>
-            </p>
-            <p><strong>Donate today for the sake of Allah's pleasure and the eternal reward of contributing to a sacred legacy.</strong></p>
+            </p><br>
+            <p><strong>Donate today for the sake of Allah's pleasure and the eternal reward of contributing to a sacred legacy.</strong></p><br>
             <a href="https://api.whatsapp.com/send?phone=+256783919781&text=Hi%20KWEF%20Admin,%20I%20would%20like%20to%20support%20you!%20Insha%20Allah." class="btn btn-success btn-lg mt-3">
                 DONATE NOW <i class="fas fa-hand-holding-usd"></i> 
             </a>
