--- a/hospital.html
+++ b/hospital.html
@@ -136,19 +136,19 @@
         </nav><br></header>
     <div class="col-md-12 mb-4">
         <div class="alert alert-info">
-            <p><strong><u>MEDICAL CENTER CONSTRUCTION</u></strong><br> Guided by the compassion of Islam, we embark on a journey to construct a medical center that will stand as a symbol of healing, mercy, and support for the vulnerable. In Islam, tending to the sick and easing their suffering is an act of worship, an opportunity to emulate the mercy of Allah.</p>
-            <p>As we lay the foundation and raise the walls of this medical sanctuary, we envision a space where the ailing will find solace, where skilled hands will provide care, and where hope will be restored. A medical center is not just a facility; it is a testament to our commitment to upholding the teachings of Islam that value the well-being of every soul.</p>
-            <p>Through the power of medicine, we alleviate pain, restore health, and bring comfort to those in need. The construction of this medical center is a testament to our dedication to serving humanity and promoting the teachings of compassion and empathy taught by our beloved Prophet Muhammad (ﷺ).</p>
-            <p>However, the realization of this vision requires collective effort and generosity. We extend an earnest invitation to you to be a part of this noble endeavor. Your contribution is not merely a financial offering; it is an investment in the well-being of the community and a means to earn eternal rewards.</p>
-            <p>Imagine the impact of every life saved, every pain eased, and every family comforted within the walls you helped establish. Your support will echo through time, becoming a source of relief and comfort for countless individuals facing challenges.</p>
-            <p>As we unite to construct this hub of healing, let us remember the words of the Prophet Muhammad (ﷺ):</p>
+            <p><strong><u>MEDICAL CENTER CONSTRUCTION</u></strong><br> Guided by the compassion of Islam, we embark on a journey to construct a medical center that will stand as a symbol of healing, mercy, and support for the vulnerable. In Islam, tending to the sick and easing their suffering is an act of worship, an opportunity to emulate the mercy of Allah.</p><br>
+            <p>As we lay the foundation and raise the walls of this medical sanctuary, we envision a space where the ailing will find solace, where skilled hands will provide care, and where hope will be restored. A medical center is not just a facility; it is a testament to our commitment to upholding the teachings of Islam that value the well-being of every soul.</p><br>
+            <p>Through the power of medicine, we alleviate pain, restore health, and bring comfort to those in need. The construction of this medical center is a testament to our dedication to serving humanity and promoting the teachings of compassion and empathy taught by our beloved Prophet Muhammad (ﷺ).</p><br>
+            <p>However, the realization of this vision requires collective effort and generosity. We extend an earnest invitation to you to be a part of this noble endeavor. Your contribution is not merely a financial offering; it is an investment in the well-being of the community and a means to earn eternal rewards.</p><br>
+            <p>Imagine the impact of every life saved, every pain eased, and every family comforted within the walls you helped establish. Your support will echo through time, becoming a source of relief and comfort for countless individuals facing challenges.</p><br>
+            <p>As we unite to construct this hub of healing, let us remember the words of the Prophet Muhammad (ﷺ):</p><br>
             <p class="hadith-text-arabic">
                 "تَدَاوَوْا، فَإِنَّ اللَّهَ لَمْ يَضَعْ دَاءً إِلا وَضَعَ لَهُ دَوَاءً، إِلا دَاءً وَاحِدًا، قَالُوا: يَا رَسُولَ اللَّهِ، وَمَا هُوَ؟ قَالَ: الْهَرَمُ"
-            </p>
+            </p><br>
             <p class="translation-text">
                <em>"Make use of medical treatment, for Allah has not made a disease without appointing a remedy for it, with the exception of one disease, namely old age." (Sahih al-Bukhari)</em> 
-            </p>
-            <p><strong>Your contribution matters. Partner with us in building not just a medical center, but a sanctuary of mercy, health, and support.</strong></p>
+            </p><br>
+            <p><strong>Your contribution matters. Partner with us in building not just a medical center, but a sanctuary of mercy, health, and support.</strong></p><br>
             <a href="https://api.whatsapp.com/send?phone=+256783919781&text=Hi%20KWEF%20Admin,%20I%20would%20like%20to%20support%20you!%20Insha%20Allah." class="btn btn-success btn-lg mt-3">
                 DONATE NOW <i class="fas fa-hand-holding-usd"></i> 
             </a>
