--- a/about.html
+++ b/about.html
@@ -106,9 +106,10 @@
     <title>Kibale Welfare and Education Foundation</title>
 </head>
 <body>
-    <header>
-        <h1>Kibale Welfare and Education Foundation Limited</h1><br>
-        <nav>
+    <header class="bg-primary text-white">
+        <a href="index.html" class="text-white text-decoration-none">
+            <h1>Kibale Welfare and Education Foundation Limited</h1>
+        </a><br><nav>
             <ul>
                 <li class="dropdown">
                     <a href="#" class="dropbtn">Activities &#8964;</a>
