--- a/children.html
+++ b/children.html
@@ -171,11 +171,19 @@
 </div>
 
   
-<br><footer style="background-color: #f2f2f2;">
-<center>
-    <p>&copy; 2023 Kibale Welfare and Education Foundation Limited. All rights reserved.</p>
-</center>
+<br><footer style="background-color: #f2f2f2; padding: 20px 0;">
+    <center>
+        <p>&copy; <span id="currentYear"></span> Kibale Welfare and Education Foundation Limited. All rights reserved.</p>
+    </center>
 </footer>
+
+<script>
+    // Get the current year and update the content of the 'currentYear' span
+    const currentYearSpan = document.getElementById('currentYear');
+    const currentYear = new Date().getFullYear();
+    currentYearSpan.textContent = currentYear;
+</script>
+
                         
 
 <script>
