--- a/ramadhan.html
+++ b/ramadhan.html
@@ -18,7 +18,7 @@
         header {
             background-color: #3498db;
             color: #fff;
-            padding: 20px;
+            padding: 0.5px;
             text-align: center;
             position: sticky;
             top: 0;
@@ -172,14 +172,19 @@
 </div>
 
   
-<br><footer style="background-color: #f2f2f2;">
-<center>
-    <p>&copy; 2023 Kibale Welfare and Education Foundation Limited. All rights reserved.</p>
-</center>
+<br><footer style="background-color: #f2f2f2; padding: 20px 0;">
+    <center>
+        <p>&copy; <span id="currentYear"></span> Kibale Welfare and Education Foundation Limited. All rights reserved.</p>
+    </center>
 </footer>
-                        
 
 <script>
+    // Get the current year and update the content of the 'currentYear' span
+    const currentYearSpan = document.getElementById('currentYear');
+    const currentYear = new Date().getFullYear();
+    currentYearSpan.textContent = currentYear;
+
+                        
     // Show or hide the "Back to Top" button based on scroll position
     window.onscroll = function() {
         var backToTopBtn = document.querySelector('.back-to-top');
