--- a/adhuhah.html
+++ b/adhuhah.html
@@ -114,27 +114,33 @@
         <a href="index.html" class="text-white text-decoration-none">
             <h1>Kibale Welfare and Education Foundation Limited</h1>
         </a><br><nav>
-            <ul>
-                <li class="dropdown">
-                    <a href="#" class="dropbtn">Activities &#8964;</a>
-                    <div class="dropdown-content">
-                        <a href="mosque.html">Mosque Construction</a>
-                        <a href="school.html">School Construction</a>
-                        <a href="hospital.html">Medical Centers</a>
-                        <a href="construction.html">Needy-house Construction</a>
-                        <a href="adhuhah.html">Qurbani/ Adhuhah</a>
-                        <a href="ramadhan.html">Ramadhan Iftar</a>
-                        <a href="orphans.html">Orphanage Support</a>
-                        <a href="livestock.html">Live stock</a>
-                        <a href="umrah.html">Hijjah and Umrah Sponsorship</a>
-                        <a href="food aid.html">Food Aid</a>
-                        <a href="well.html">Water Wells</a>
-                        <a href="">Sewing Machine Distribution</a>
-                        <a href="widow.html">Widow and Orphan sponsorship</a>
-                    </div>
-                </li>
-                </ul>            
-        </nav>
+    <ul>
+        <li class="dropdown">
+            <a href="#" class="dropbtn">Activities &#8964;</a>
+            <div class="dropdown-content">
+                <a href="mosque.html">Build a Mosque for a Community</a>
+                <a href="school.html">Build a School for a Community</a>
+                <a href="hospital.html">Medical Centers</a>
+                <a href="widow.html">Orphan Sponsorship</a>
+                <a href="adhuhah.html">Build a Health Center</a>
+                <a href="ramadhan.html">Iftar Project</a>
+                <a href="widow.html">Build a Home for a Widow</a>
+                <a href="food aid.html">Food Aid</a>
+                <a href="livestock.html">Drilling and Construction of a Borehall</a>
+                <a href="skill.html">Skill Empowerment</a>
+                <a href="well.html">Child Protection</a>
+                <a href="empowerment.html">Community Economic Empowerment</a>
+                <a href="awareness.html">Community Awareness</a>
+                <a href="vegetables.html">Vegetables Project and School Feeding</a>
+                <a href="environment.html">Environmental Protection</a>
+                <a href="vulnerable.html">Vulnerable Support</a>
+                <a href="dhuhiya.html">Dhuhiya Project</a>
+                <a href="umrah.html">Umrah Initiative</a>
+            </div>
+        </li>
+    </ul>
+</nav>
+
     </header>
     <div class="col-md-12 mb-4">
         <div class="alert alert-info">
