--- a/food aid.html
+++ b/food aid.html
@@ -114,41 +114,47 @@
         <a href="index.html" class="text-white text-decoration-none">
             <h1>Kibale Welfare and Education Foundation Limited</h1>
         </a><br><nav>
-            <ul>
-                <li class="dropdown">
-                    <a href="#" class="dropbtn">Activities &#8964;</a>
-                    <div class="dropdown-content">
-                        <a href="mosque.html">Mosque Construction</a>
-                        <a href="school.html">School Construction</a>
-                        <a href="hospital.html">Medical Centers</a>
-                        <a href="construction.html">Needy-house Construction</a>
-                        <a href="adhuhah.html">Qurbani/ Adhuhah</a>
-                        <a href="ramadhan.html">Ramadhan Iftar</a>
-                        <a href="orphans.html">Orphanage Support</a>
-                        <a href="livestock.html">Live stock</a>
-                        <a href="umrah.html">Hijjah and Umrah Sponsorship</a>
-                        <a href="food aid.html">Food Aid</a>
-                        <a href="well.html">Water Wells</a>
-                        <a href="">Sewing Machine Distribution</a>
-                        <a href="widow.html">Widow and Orphan sponsorship</a>
-                    </div>
-                </li>
-                </ul>            
-        </nav><br></header>
+    <ul>
+        <li class="dropdown">
+            <a href="#" class="dropbtn">Activities &#8964;</a>
+            <div class="dropdown-content">
+                <a href="mosque.html">Build a Mosque for a Community</a>
+                <a href="school.html">Build a School for a Community</a>
+                <a href="hospital.html">Medical Centers</a>
+                <a href="widow.html">Orphan Sponsorship</a>
+                <a href="adhuhah.html">Build a Health Center</a>
+                <a href="ramadhan.html">Iftar Project</a>
+                <a href="widow.html">Build a Home for a Widow</a>
+                <a href="food aid.html">Food Aid</a>
+                <a href="livestock.html">Drilling and Construction of a Borehall</a>
+                <a href="skill.html">Skill Empowerment</a>
+                <a href="well.html">Child Protection</a>
+                <a href="empowerment.html">Community Economic Empowerment</a>
+                <a href="awareness.html">Community Awareness</a>
+                <a href="vegetables.html">Vegetables Project and School Feeding</a>
+                <a href="environment.html">Environmental Protection</a>
+                <a href="vulnerable.html">Vulnerable Support</a>
+                <a href="dhuhiya.html">Dhuhiya Project</a>
+                <a href="umrah.html">Umrah Initiative</a>
+            </div>
+        </li>
+    </ul>
+</nav>
+<br></header>
 <div class="col-md-12 mb-4">
     <div class="alert alert-info">
-        <p><strong><u>FOOD AID PROJECT</u></strong><br> In the spirit of compassion and solidarity, we introduce our Food Aid Project—a humanitarian initiative aimed at alleviating hunger and providing sustenance to those in need. Guided by the teachings of Islam, we recognize the importance of feeding the hungry and helping those facing challenging circumstances.</p>
-        <p>The Food Aid Project is a beacon of hope for individuals and families struggling to find their next meal. By offering nutritional support, we not only address their physical needs but also uplift their spirits, reminding them that they are not alone in their struggles.</p>
-        <p>This project is an embodiment of the values of empathy and selflessness that Islam teaches us. Through your generous donations, we can provide essential food items to those who are most vulnerable, ensuring that they have access to nourishing sustenance and a sense of dignity.</p>
-        <p>Our call for support is directed to you, the caring members of our Islamic community. Your contributions hold the power to make a significant impact on the lives of those less fortunate. Together, we can provide relief to hungry stomachs and bring smiles to faces that have known hardship.</p>
-        <p>As we extend our hands to those in need, let us reflect on the words of Allah in the Quran (2:267):</p>
+        <p><strong><u>FOOD AID PROJECT</u></strong><br> In the spirit of compassion and solidarity, we introduce our Food Aid Project—a humanitarian initiative aimed at alleviating hunger and providing sustenance to those in need. Guided by the teachings of Islam, we recognize the importance of feeding the hungry and helping those facing challenging circumstances.</p><br>
+        <p>The Food Aid Project is a beacon of hope for individuals and families struggling to find their next meal. By offering nutritional support, we not only address their physical needs but also uplift their spirits, reminding them that they are not alone in their struggles.</p><br>
+        <p>This project is an embodiment of the values of empathy and selflessness that Islam teaches us. Through your generous donations, we can provide essential food items to those who are most vulnerable, ensuring that they have access to nourishing sustenance and a sense of dignity.</p><br>
+        <p>Our call for support is directed to you, the caring members of our Islamic community. Your contributions hold the power to make a significant impact on the lives of those less fortunate. Together, we can provide relief to hungry stomachs and bring smiles to faces that have known hardship.</p><br>
+        <p>As we extend our hands to those in need, let us reflect on the words of Allah in the Quran (2:267):</p><br>
         <p class="arabic-text">
             "يَـٰٓأَيُّهَا ٱلَّذِينَ ءَامَنُوٓاْ أَنفِقُواْ مِن طَيِّبَـٰتِ مَا كَسَبۡتُم وَمِمَّآ أَخۡرَجۡنَا لَكُم مِّنَ ٱلۡأَرۡضِۖ وَلَا تَيَمَّمُواْ ٱلۡخَبِيثَ مِنۡهُ تُنفِقُونَ وَلَسۡتُم بِـَٔاخِذِيهِ إِلَّآ أَن تُغۡمِضُواْ فِيهِۚ وَٱعۡلَمُوٓاْ أَنَّ ٱللَّهَ غَنِىٌّ حَمِيدٌۭ"
-        </p>
+        </p><br>
         <p class="translation-text">
             <em>"O you who have believed, spend from the good things which you have earned and from that which We have produced for you from the earth. And do not aim toward the defective therefrom, spending [from that] while you would not take it [yourself] except with closed eyes. And know that Allah is Free of need and Praiseworthy."</em>
-        </p>
-        <p><strong>Your support in this endeavor holds the potential to transform lives. Join us in the Food Aid Project and be a source of mercy and nourishment for those in need.</strong></p>
+        </p><br>
+        <p><strong>Your support in this endeavor holds the potential to transform lives. Join us in the Food Aid Project and be a source of mercy and nourishment for those in need.</strong></p><br>
         <a href="https://api.whatsapp.com/send?phone=+256783919781&text=Hi%20KWEF%20Admin,%20I%20would%20like%20to%20support%20you!%20Insha%20Allah." class="btn btn-success btn-lg mt-3">
             SUPPORT NOW <i class="fas fa-hand-holding-usd"></i> 
         </a>
@@ -176,7 +182,7 @@
   
 <br><footer style="background-color: #f2f2f2; padding: 20px 0;">
     <center>
-        <p>&copy; <span id="currentYear"></span> Kibale Welfare and Education Foundation Limited. All rights reserved.</p>
+        <p>&copy; <span id="currentYear"></span> Kibale Welfare and Education Foundation Limited. All rights reserved.</p><br>
     </center>
 </footer>
 
