--- a/index.html
+++ b/index.html
@@ -3376,7 +3376,7 @@ height: calc(100% - 45px);
               <div class="wpb_wrapper">
                   <div style="background-color:; height: 5px;" class="nicdark_section  "></div>
 	
-                  <a style="border: 2px solid #ffffff; border-radius:30px; letter-spacing:px; line-height:px; font-size:px; background-color:#444444; padding:10px 20px; margin:; color:#ffffff;" rel=""  href="contact-us" class="nicdark_display_inline_block nd_options_float_right  nd_options_first_font nd_options_float_left_responsive nd_options_margin_top_5_responsive git_btn ">Get In Touch</a>
+				  <a style="border: 2px solid #ffffff; border-radius: 30px; letter-spacing: px; line-height: px; font-size: px; background-color: #444444; padding: 10px 20px; margin: ; color: #ffffff;" rel="" href="tel:+256783919781" class="nicdark_display_inline_block nd_options_float_right nd_options_first_font nd_options_float_left_responsive nd_options_margin_top_5_responsive git_btn">Get In Touch</a>
 	
 </div></div></div></div>
                                                         <div class="vc_row wpb_row vc_inner vc_row-fluid">
