--- a/adhuhah.html
+++ b/adhuhah.html
@@ -212,102 +212,44 @@
         document.documentElement.scrollTop = 0; // For Chrome, Firefox, IE and Opera
     }
    
-        const photos = ["images/CLINICS 2.jpg",
-         "images/CLOTHES 1.jpg",
-          "images/CLOTHES 2.jpg",
-          "images/health3.jpg",
-          "images/home4.jpg",
-          "images/HOUSES 1.jpg",
-          "images/HOUSES 2.jpg",
-          "images/HOUSES 3.jpg",
-          "images/IMG-20230810-WA0012.jpg",
-          "images/IMG-20230810-WA0014.jpg",
-          "images/IMG-20230810-WA0018.jpg",
-          "images/IMG-20230810-WA0019.jpg",
-          "images/IMG-20230810-WA0021.jpg",
-          "images/IMG-20230810-WA0022.jpg",
-          "images/IMG-20230810-WA0023.jpg",
-          "images/IMG-20230810-WA0024.jpg",
-          "images/IMG-20230810-WA0025.jpg",
-          "images/IMG-20230810-WA0026.jpg",
-          "images/IMG-20230810-WA0027.jpg",
-          "images/IMG-20230810-WA0028.jpg",
-          "images/IMG-20230810-WA0029.jpg",
-          "images/IMG-20230810-WA0030.jpg",
-          "images/IMG-20230810-WA0031.jpg",
-          "images/IMG-20230810-WA0032.jpg",
-          "images/IMG-20230810-WA0033.jpg",
-          "images/IMG-20230810-WA0034.jpg",
-          "images/IMG-20230810-WA0035.jpg",
-          "images/IMG-20230810-WA0036.jpg",
-          "images/IMG-20230810-WA0037.jpg",
-          "images/IMG-20230810-WA0038.jpg",
-          "images/IMG-20230810-WA0039.jpg",
-          "images/IMG-20230810-WA0040.jpg",
-          "images/IMG-20230810-WA0041.jpg",
-          "images/IMG-20230810-WA0042.jpg",
-          "images/IMG-20230810-WA0043.jpg",
-          "images/IMG-20230810-WA0044.jpg",
-          "images/IMG-20230810-WA0045.jpg",
-          "images/IMG-20230810-WA0046.jpg",
-          "images/IMG-20230810-WA0047.jpg",
-          "images/IMG-20230810-WA0048.jpg",
-          "images/IMG-20230810-WA0049.jpg",
-          "images/IMG-20230810-WA0050.jpg",
-          "images/IMG-20230810-WA0051.jpg",
-          "images/IMG-20230810-WA0052.jpg",
-          "images/IMG-20230810-WA0053.jpg",
-          "images/IMG-20230810-WA0054.jpg",
-          "images/IMG-20230810-WA0055.jpg",
-          "images/IMG-20230810-WA0056.jpg",
-          "images/IMG-20230810-WA0057.jpg",
-          "images/IMG-20230810-WA0058.jpg",
-          "images/IMG-20230810-WA0059.jpg",
-          "images/IMG-20230810-WA0060.jpg",
-          "images/IMG-20230810-WA0062.jpg",
-          "images/IMG-20230810-WA0064.jpg",
-          "images/IMG-20230810-WA0065.jpg",
-          "images/IMG-20230810-WA0066.jpg",
-          "images/IMG-20230810-WA0067.jpg",
-          "images/IMG-20230810-WA0068.jpg",
-          "images/IMG-20230810-WA0069.jpg",
-          "images/IMG-20230810-WA0070.jpg",
-          "images/IMG-20230810-WA0071.jpg",
-          "images/IMG-20230810-WA0072.jpg",
-          "images/IMG-20230810-WA0073.jpg",
-          "images/IMG-20230810-WA0074.jpg",
-          "images/IMG-20230810-WA0075.jpg",
-          "images/IMG-20230810-WA0076.jpg",
-          "images/IMG-20230810-WA0077.jpg",
-          "images/IMG-20230810-WA0078.jpg",
-          "images/IMG-20230810-WA0079.jpg",
-          "images/IMG-20230810-WA0080.jpg",
-          "images/IMG-20230810-WA0081.jpg",
-          "images/IMG-20230810-WA0082.jpg",
-          "images/IMG-20230810-WA0083.jpg",
-          "images/IMG-20230810-WA0084.jpg",
-          "images/IMG-20230810-WA0085.jpg",
-          "images/IMG-20230810-WA0087.jpg",
-          "images/IMG-20230810-WA0088.jpg",
-          "images/IMG-20230810-WA0089.jpg",
-          "images/IMG-20230810-WA0090.jpg",
-          "images/IMG-20230810-WA0091.jpg",
-          "images/IMG-20230810-WA0093.jpg",
-          "images/IMG-20230810-WA0094.jpg",
-          "images/IMG-20230810-WA0096.jpg",
-          "images/IMG-20230810-WA0097.jpg",
-          "images/IMG-20230810-WA0098.jpg",
-          "images/IMG-20230810-WA0099.jpg",
-          "images/IMG-20230810-WA0102.jpg",
-          "images/IMG-20230810-WA0103.jpg",
-          "images/mosque1.jpg",
-          "images/orphan1.jpg",
-          "images/qurban1.jpg",
-          "images/qurban3.jpg",
-          "images/ramadhan.jpg",
-          "images/school2.jpg",
-          "images/school2.jpg",
-        "images/ramadhan.jpg",
+        const photos = [
+          "Iftar project/IMG-20230820-WA0077.jpg",
+          "Iftar project/IMG-20230820-WA0078.jpg",
+          "Iftar project/IMG-20230820-WA0079.jpg",
+          "Iftar project/IMG-20230820-WA0080.jpg",
+          "Iftar project/IMG-20230820-WA0081.jpg",
+          "Iftar project/IMG-20230820-WA0082.jpg",
+          "Iftar project/IMG-20230820-WA0083.jpg",
+          "Iftar project/IMG-20230820-WA0084.jpg",
+          "Iftar project/IMG-20230820-WA0085.jpg",
+          "Iftar project/IMG-20230820-WA0087.jpg",
+          "Iftar project/IMG-20230820-WA0088.jpg",
+          "Iftar project/IMG-20230820-WA0089.jpg",
+          "Iftar project/IMG-20230820-WA0090.jpg",
+          "Iftar project/IMG-20230820-WA0091.jpg",
+          "Iftar project/IMG-20230820-WA0093.jpg",
+          "Iftar project/IMG-20230820-WA0094.jpg",
+          "Iftar project/IMG-20230820-WA0096.jpg",
+          "Iftar project/IMG-20230820-WA0097.jpg",
+          "Iftar project/IMG-20230820-WA0098.jpg",
+          "Iftar project/IMG-20230820-WA0099.jpg",
+          "Iftar project/IMG-20230820-WA0103.jpg",
+          "Iftar project/IMG-20230820-WA0104.jpg",
+          "Iftar project/IMG-20230820-WA0105.jpg",
+          "Iftar project/IMG-20230820-WA0106.jpg",
+          "Iftar project/IMG-20230820-WA0107.jpg",
+          "Iftar project/IMG-20230820-WA0108.jpg",
+          "Iftar project/IMG-20230820-WA0109.jpg",
+          "Iftar project/IMG-20230820-WA0110.jpg",
+          "Iftar project/IMG-20230820-WA0111.jpg",
+          "Iftar project/IMG-20230820-WA0112.jpg",
+          "Iftar project/IMG-20230820-WA0113.jpg",
+          "Iftar project/IMG-20230820-WA0114.jpg",
+          "Iftar project/IMG-20230820-WA0115.jpg",
+          "Iftar project/IMG-20230820-WA0116.jpg",
+          "Iftar project/IMG-20230820-WA0117.jpg",
+          "Iftar project/IMG-20230820-WA0118.jpg",
+
               ];
 
         const galleryContainer = document.getElementById('photoGallery');
