--- a/adhuhah.html
+++ b/adhuhah.html
@@ -213,42 +213,27 @@
     }
    
         const photos = [
-          "Iftar project/IMG-20230820-WA0077.jpg",
-          "Iftar project/IMG-20230820-WA0078.jpg",
-          "Iftar project/IMG-20230820-WA0079.jpg",
-          "Iftar project/IMG-20230820-WA0080.jpg",
-          "Iftar project/IMG-20230820-WA0081.jpg",
-          "Iftar project/IMG-20230820-WA0082.jpg",
-          "Iftar project/IMG-20230820-WA0083.jpg",
-          "Iftar project/IMG-20230820-WA0084.jpg",
-          "Iftar project/IMG-20230820-WA0085.jpg",
-          "Iftar project/IMG-20230820-WA0087.jpg",
-          "Iftar project/IMG-20230820-WA0088.jpg",
-          "Iftar project/IMG-20230820-WA0089.jpg",
-          "Iftar project/IMG-20230820-WA0090.jpg",
-          "Iftar project/IMG-20230820-WA0091.jpg",
-          "Iftar project/IMG-20230820-WA0093.jpg",
-          "Iftar project/IMG-20230820-WA0094.jpg",
-          "Iftar project/IMG-20230820-WA0096.jpg",
-          "Iftar project/IMG-20230820-WA0097.jpg",
-          "Iftar project/IMG-20230820-WA0098.jpg",
-          "Iftar project/IMG-20230820-WA0099.jpg",
-          "Iftar project/IMG-20230820-WA0103.jpg",
-          "Iftar project/IMG-20230820-WA0104.jpg",
-          "Iftar project/IMG-20230820-WA0105.jpg",
-          "Iftar project/IMG-20230820-WA0106.jpg",
-          "Iftar project/IMG-20230820-WA0107.jpg",
-          "Iftar project/IMG-20230820-WA0108.jpg",
-          "Iftar project/IMG-20230820-WA0109.jpg",
-          "Iftar project/IMG-20230820-WA0110.jpg",
-          "Iftar project/IMG-20230820-WA0111.jpg",
-          "Iftar project/IMG-20230820-WA0112.jpg",
-          "Iftar project/IMG-20230820-WA0113.jpg",
-          "Iftar project/IMG-20230820-WA0114.jpg",
-          "Iftar project/IMG-20230820-WA0115.jpg",
-          "Iftar project/IMG-20230820-WA0116.jpg",
-          "Iftar project/IMG-20230820-WA0117.jpg",
-          "Iftar project/IMG-20230820-WA0118.jpg",
+        "Photo from Fresh Teacher (4).jpg",
+         "Dhuhiyah/IMG-20230820-WA0473.jpg",
+          "Dhuhiyah/IMG-20230820-WA0474.jpg",
+          "Dhuhiyah/IMG-20230820-WA0475.jpg",
+          "Dhuhiyah/IMG-20230820-WA0476.jpg",
+          "Dhuhiyah/IMG-20230820-WA0477.jpg",
+          "Dhuhiyah/IMG-20230820-WA0478.jpg",
+          "Dhuhiyah/IMG-20230820-WA0479.jpg",
+          "Dhuhiyah/IMG-20230820-WA0480.jpg",
+          "Dhuhiyah/IMG-20230820-WA0481.jpg",
+          "Dhuhiyah/IMG-20230820-WA0482.jpg",
+          "Dhuhiyah/IMG-20230820-WA0483.jpg",
+          "Dhuhiyah/IMG-20230820-WA0484.jpg",
+          "Dhuhiyah/IMG-20230820-WA0485.jpg",
+          "Dhuhiyah/IMG-20230820-WA0487.jpg",
+          "Dhuhiyah/IMG-20230820-WA0488.jpg",
+          "Dhuhiyah/IMG-20230820-WA0489.jpg",
+          "Dhuhiyah/IMG-20230820-WA0490.jpg",
+          "Dhuhiyah/IMG-20230820-WA0491.jpg",
+           
+          
 
               ];
 
