--- a/skill.html
+++ b/skill.html
@@ -212,102 +212,99 @@
         document.documentElement.scrollTop = 0; // For Chrome, Firefox, IE and Opera
     }
    
-        const photos = ["images/CLINICS 2.jpg",
-         "images/CLOTHES 1.jpg",
-          "images/CLOTHES 2.jpg",
-          "images/health3.jpg",
-          "images/home4.jpg",
-          "images/HOUSES 1.jpg",
-          "images/HOUSES 2.jpg",
-          "images/HOUSES 3.jpg",
-          "images/IMG-20230810-WA0012.jpg",
-          "images/IMG-20230810-WA0014.jpg",
-          "images/IMG-20230810-WA0018.jpg",
-          "images/IMG-20230810-WA0019.jpg",
-          "images/IMG-20230810-WA0021.jpg",
-          "images/IMG-20230810-WA0022.jpg",
-          "images/IMG-20230810-WA0023.jpg",
-          "images/IMG-20230810-WA0024.jpg",
-          "images/IMG-20230810-WA0025.jpg",
-          "images/IMG-20230810-WA0026.jpg",
-          "images/IMG-20230810-WA0027.jpg",
-          "images/IMG-20230810-WA0028.jpg",
-          "images/IMG-20230810-WA0029.jpg",
-          "images/IMG-20230810-WA0030.jpg",
-          "images/IMG-20230810-WA0031.jpg",
-          "images/IMG-20230810-WA0032.jpg",
-          "images/IMG-20230810-WA0033.jpg",
-          "images/IMG-20230810-WA0034.jpg",
-          "images/IMG-20230810-WA0035.jpg",
-          "images/IMG-20230810-WA0036.jpg",
-          "images/IMG-20230810-WA0037.jpg",
-          "images/IMG-20230810-WA0038.jpg",
-          "images/IMG-20230810-WA0039.jpg",
-          "images/IMG-20230810-WA0040.jpg",
-          "images/IMG-20230810-WA0041.jpg",
-          "images/IMG-20230810-WA0042.jpg",
-          "images/IMG-20230810-WA0043.jpg",
-          "images/IMG-20230810-WA0044.jpg",
-          "images/IMG-20230810-WA0045.jpg",
-          "images/IMG-20230810-WA0046.jpg",
-          "images/IMG-20230810-WA0047.jpg",
-          "images/IMG-20230810-WA0048.jpg",
-          "images/IMG-20230810-WA0049.jpg",
-          "images/IMG-20230810-WA0050.jpg",
-          "images/IMG-20230810-WA0051.jpg",
-          "images/IMG-20230810-WA0052.jpg",
-          "images/IMG-20230810-WA0053.jpg",
-          "images/IMG-20230810-WA0054.jpg",
-          "images/IMG-20230810-WA0055.jpg",
-          "images/IMG-20230810-WA0056.jpg",
-          "images/IMG-20230810-WA0057.jpg",
-          "images/IMG-20230810-WA0058.jpg",
-          "images/IMG-20230810-WA0059.jpg",
-          "images/IMG-20230810-WA0060.jpg",
-          "images/IMG-20230810-WA0062.jpg",
-          "images/IMG-20230810-WA0064.jpg",
-          "images/IMG-20230810-WA0065.jpg",
-          "images/IMG-20230810-WA0066.jpg",
-          "images/IMG-20230810-WA0067.jpg",
-          "images/IMG-20230810-WA0068.jpg",
-          "images/IMG-20230810-WA0069.jpg",
-          "images/IMG-20230810-WA0070.jpg",
-          "images/IMG-20230810-WA0071.jpg",
-          "images/IMG-20230810-WA0072.jpg",
-          "images/IMG-20230810-WA0073.jpg",
-          "images/IMG-20230810-WA0074.jpg",
-          "images/IMG-20230810-WA0075.jpg",
-          "images/IMG-20230810-WA0076.jpg",
-          "images/IMG-20230810-WA0077.jpg",
-          "images/IMG-20230810-WA0078.jpg",
-          "images/IMG-20230810-WA0079.jpg",
-          "images/IMG-20230810-WA0080.jpg",
-          "images/IMG-20230810-WA0081.jpg",
-          "images/IMG-20230810-WA0082.jpg",
-          "images/IMG-20230810-WA0083.jpg",
-          "images/IMG-20230810-WA0084.jpg",
-          "images/IMG-20230810-WA0085.jpg",
-          "images/IMG-20230810-WA0087.jpg",
-          "images/IMG-20230810-WA0088.jpg",
-          "images/IMG-20230810-WA0089.jpg",
-          "images/IMG-20230810-WA0090.jpg",
-          "images/IMG-20230810-WA0091.jpg",
-          "images/IMG-20230810-WA0093.jpg",
-          "images/IMG-20230810-WA0094.jpg",
-          "images/IMG-20230810-WA0096.jpg",
-          "images/IMG-20230810-WA0097.jpg",
-          "images/IMG-20230810-WA0098.jpg",
-          "images/IMG-20230810-WA0099.jpg",
-          "images/IMG-20230810-WA0102.jpg",
-          "images/IMG-20230810-WA0103.jpg",
-          "images/mosque1.jpg",
-          "images/orphan1.jpg",
-          "images/qurban1.jpg",
-          "images/qurban3.jpg",
-          "images/ramadhan.jpg",
-          "images/school2.jpg",
-          "images/school2.jpg",
-        "images/ramadhan.jpg",
+        const photos = [
+         "Skill Empowerment/IMG-20230820-WA0148.jpg",
+         "Skill Empowerment/IMG-20230820-WA0155.jpg",
+         "Skill Empowerment/IMG-20230820-WA0156.jpg",
+         "Skill Empowerment/IMG-20230820-WA0157.jpg",
+         "Skill Empowerment/IMG-20230820-WA0158.jpg",
+         "Skill Empowerment/IMG-20230820-WA0159.jpg",
+         "Skill Empowerment/IMG-20230820-WA0160.jpg",
+         "Skill Empowerment/IMG-20230820-WA0161.jpg",
+         "Skill Empowerment/IMG-20230820-WA0162.jpg",
+         "Skill Empowerment/IMG-20230820-WA0163.jpg",
+         "Skill Empowerment/IMG-20230820-WA0164.jpg",
+         "Skill Empowerment/IMG-20230820-WA0165.jpg",
+         "Skill Empowerment/IMG-20230820-WA0166.jpg",
+         "Skill Empowerment/IMG-20230820-WA0167.jpg",
+         "Skill Empowerment/IMG-20230820-WA0168.jpg",
+         "Skill Empowerment/IMG-20230820-WA0169.jpg",
+         "Skill Empowerment/IMG-20230820-WA0170.jpg",
+         "Skill Empowerment/IMG-20230820-WA0171.jpg",
+         "Skill Empowerment/IMG-20230820-WA0172.jpg",
+         "Skill Empowerment/IMG-20230820-WA0173.jpg",
+         "Skill Empowerment/IMG-20230820-WA0174.jpg",
+         "Skill Empowerment/IMG-20230820-WA0175.jpg",
+         "Skill Empowerment/IMG-20230820-WA0176.jpg",
+         "Skill Empowerment/IMG-20230820-WA0177.jpg",
+         "Skill Empowerment/IMG-20230820-WA0178.jpg",
+         "Skill Empowerment/IMG-20230820-WA0179.jpg",
+         "Skill Empowerment/IMG-20230820-WA0180.jpg",
+         "Skill Empowerment/IMG-20230820-WA0181.jpg",
+         "Skill Empowerment/IMG-20230820-WA0182.jpg",
+         "Skill Empowerment/IMG-20230820-WA0183.jpg",
+         "Skill Empowerment/IMG-20230820-WA0184.jpg",
+         "Skill Empowerment/IMG-20230820-WA0185.jpg",
+         "Skill Empowerment/IMG-20230820-WA0186.jpg",
+         "Skill Empowerment/IMG-20230820-WA0187.jpg",
+         "Skill Empowerment/IMG-20230820-WA0188.jpg",
+         "Skill Empowerment/IMG-20230820-WA0189.jpg",
+         "Skill Empowerment/IMG-20230820-WA0190.jpg",
+         "Skill Empowerment/IMG-20230820-WA0191.jpg",
+         "Skill Empowerment/IMG-20230820-WA0192.jpg",
+         "Skill Empowerment/IMG-20230820-WA0193.jpg",
+         "Skill Empowerment/IMG-20230820-WA0194.jpg",
+         "Skill Empowerment/IMG-20230820-WA0195.jpg",
+         "Skill Empowerment/IMG-20230820-WA0196.jpg",
+         "Skill Empowerment/IMG-20230820-WA0197.jpg",
+         "Skill Empowerment/IMG-20230820-WA0198.jpg",
+         "Skill Empowerment/IMG-20230820-WA0199.jpg",
+         "Skill Empowerment/IMG-20230820-WA0200.jpg",
+         "Skill Empowerment/IMG-20230820-WA0201.jpg",
+         "Skill Empowerment/IMG-20230820-WA0202.jpg",
+         "Skill Empowerment/IMG-20230820-WA0203.jpg",
+         "Skill Empowerment/IMG-20230820-WA0204.jpg",
+         "Skill Empowerment/IMG-20230820-WA0205.jpg",
+         "Skill Empowerment/IMG-20230820-WA0206.jpg",
+         "Skill Empowerment/IMG-20230820-WA0207.jpg",
+         "Skill Empowerment/IMG-20230820-WA0208.jpg",
+         "Skill Empowerment/IMG-20230820-WA0209.jpg",
+         "Skill Empowerment/IMG-20230820-WA0210.jpg",
+         "Skill Empowerment/IMG-20230820-WA0211.jpg",
+         "Skill Empowerment/IMG-20230820-WA0212.jpg",
+         "Skill Empowerment/IMG-20230820-WA0213.jpg",
+         "Skill Empowerment/IMG-20230820-WA0214.jpg",
+         "Skill Empowerment/IMG-20230820-WA0215.jpg",
+         "Skill Empowerment/IMG-20230820-WA0216.jpg",
+         "Skill Empowerment/IMG-20230820-WA0217.jpg",
+         "Skill Empowerment/IMG-20230820-WA0218.jpg",
+         "Skill Empowerment/IMG-20230820-WA0219.jpg",
+         "Skill Empowerment/IMG-20230820-WA0220.jpg",
+         "Skill Empowerment/IMG-20230820-WA0221.jpg",
+         "Skill Empowerment/IMG-20230820-WA0222.jpg",
+         "Skill Empowerment/IMG-20230820-WA0223.jpg",
+         "Skill Empowerment/IMG-20230820-WA0224.jpg",
+         "Skill Empowerment/IMG-20230820-WA0225.jpg",
+         "Skill Empowerment/IMG-20230820-WA0226.jpg",
+         "Skill Empowerment/IMG-20230820-WA0227.jpg",
+         "Skill Empowerment/IMG-20230820-WA0228.jpg",
+         "Skill Empowerment/IMG-20230820-WA0229.jpg",
+         "Skill Empowerment/IMG-20230820-WA0230.jpg",
+         "Skill Empowerment/IMG-20230820-WA0231.jpg",
+         "Skill Empowerment/IMG-20230820-WA0232.jpg",
+         "Skill Empowerment/IMG-20230820-WA0233.jpg",
+         "Skill Empowerment/IMG-20230820-WA0245.jpg",
+         "Skill Empowerment/IMG-20230820-WA0246.jpg",
+         "Skill Empowerment/IMG-20230820-WA0247.jpg",
+         "Skill Empowerment/IMG-20230820-WA0261.jpg",
+         "Skill Empowerment/IMG-20230820-WA0262.jpg",
+         "Skill Empowerment/IMG-20230820-WA0265.jpg",
+         "Skill Empowerment/IMG-20230820-WA0269.jpg",
+         "Skill Empowerment/IMG-20230820-WA0270.jpg",
+         "Skill Empowerment/IMG-20230820-WA0271.jpg",
+         "Skill Empowerment/IMG-20230820-WA0274.jpg",
+         "Skill Empowerment/IMG-20230820-WA0276.jpg",
+         "Skill Empowerment/IMG-20230820-WA0277.jpg",
               ];
 
         const galleryContainer = document.getElementById('photoGallery');
